# Clover

./: .gitignore  CMakeLists.txt  README.md
Clover/: CMakeLists.txt
Clover/include/: Application.h  Clover.h  EntryPoint.h  Log.h
Clover/src/: Application.cpp  Log.cpp  Test.cpp  Test.h
Sandbox/: CMakeLists.txt
Sandbox/src/: main.cpp
